plugins {
    id "com.android.application"
    id "kotlin-android"
}

android {
    compileSdk 33
    buildToolsVersion "33.0.1"

    def gitCommitHash = "git rev-parse HEAD".execute().text.trim()

    def getCommitHash = { ->
        def stdout = new ByteArrayOutputStream()
        exec {
            commandLine "git", "rev-parse", "--short", "HEAD"
            standardOutput = stdout
        }
        return stdout.toString().trim()
    }

    defaultConfig {
        applicationId "com.sketchware.remod"
        namespace "com.sketchware.remod"
        //noinspection ExpiredTargetSdkVersion since we don't target getting Sketchware Pro on Google Play.
        targetSdkVersion 28
        versionCode 150
        versionName "v6.4.0-SNAPSHOT-" + getCommitHash()
        
        applicationId System.getProperty("newPackageName", defaultConfig.applicationId)

        buildConfigField("String", "GIT_HASH", "\"${gitCommitHash}\"")

        buildConfigField("String", "FLAVOR_NAME_WITH_AABS", "\"minApi26\"")
        buildConfigField("String", "FLAVOR_NAME_WITHOUT_AABS", "\"minApi21\"")

        buildConfigField("String", "VERSION_NAME_WITHOUT_FLAVOR", "\"v6.4.0-SNAPSHOT-${getCommitHash()}\"")

        buildConfigField("String", "CRASH_REPORT_WEBHOOK_URL", "\"${System.getenv("CRASH_REPORT_WEBHOOK_URL")}\"")
    }

    flavorDimensions "api"
    productFlavors {
        minApi26 {
            dimension "api"
            minSdkVersion 26
            versionNameSuffix "-minApi26"
        }

        minApi21 {
            dimension "api"
            minSdkVersion 21
            versionNameSuffix "-minApi21"
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
        }
    }

    packagingOptions {
        resources.excludes += "license/*"
        resources.excludes += "META-INF/DEPENDENCIES"
        resources.pickFirsts += "api_database/*"
    }

    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    kotlinOptions {
        jvmTarget = "11"
    }

    androidResources {
        additionalParameters "--stable-ids", "public-stable-ids.txt"
    }

    signingConfigs {
        debug {
            storeFile file("../testkey.keystore")
            storePassword "testkey"
            keyAlias "testkey"
            keyPassword "testkey"
        }
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"], exclude: "proguard-base-7.2.2.jar")
    
    //implementation 'androidx.appcompat:appcompat:1.2.0'
    //implementation 'androidx.activity:activity:1.2.0'
    //implementation 'com.google.android.material:material:1.2.0'
    //implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    implementation "androidx.annotation:annotation:1.5.0"
    implementation "com.android.tools:annotations:30.4.1"
    //implementation "com.google.guava:guava:31.1-jre"
    implementation 'com.google.guava:guava:31.1-android'
    //implementation 'androidx.fragment:fragment:1.4.1'
    def editorGroupId = "io.github.Rosemoe.sora-editor"
    implementation platform("$editorGroupId:bom:0.21.0")
    implementation "$editorGroupId:editor"
    implementation "$editorGroupId:language-java"
    implementation "$editorGroupId:language-textmate"

    implementation "de.hdodenhof:circleimageview:3.1.0"
    implementation "com.github.angads25:filepicker:1.1.1"

    minApi26Implementation "com.android.tools.build:bundletool:1.14.0"
    //noinspection GradleDependency copied from above dependency for not just runtime access
    minApi26Implementation "com.google.protobuf:protobuf-java:3.21.12"
    //noinspection GradleDependency
    implementation "com.android.tools:sdklib:25.3.0", { exclude group: "com.intellij", module: "annotations" }
    implementation "com.android.tools:r8:4.0.48"

    implementation "com.google.code.gson:gson:2.10.1"
    implementation 'com.madgag:scpkix-jdk15on:1.47.0.3'


    //noinspection GradleDependency
    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.11"
    //noinspection GradleDependency
    implementation 'com.squareup.okio:okio:3.3.0'

    // TODO: use proguard-core dependency when duplicate class issue has been fixed
    minApi21Implementation "net.sf.proguard:proguard-base:6.0.3"
    minApi26Implementation files('libs/proguard-base-7.2.2.jar')
    minApi26Implementation 'com.guardsquare:proguard-core:9.0.2'
    minApi26Implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10'

    //noinspection GradleDependency
    minApi21Implementation "org.eclipse.jdt:ecj:3.13.0"
    minApi26Implementation "org.eclipse.jdt:ecj:3.26.0"

    minApi26Implementation project(path: ":kotlinc")

    implementation "com.github.topjohnwu.libsu:core:5.0.4"

    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
}
